# nn-experments

./: Cargo.toml
applications/nutrition-labels/: Cargo.toml
applications/nutrition-labels/src/: cli.rs  main.rs  model.rs  test.rs  train.rs
common/transformers/: Cargo.toml
common/transformers/src/: attention.rs  block.rs  embeddings.rs  lib.rs  positional_encoding.rs
common/transformers/src/attention/: general.rs  nystrom.rs  standard.rs
data/synthetic-nutrition-labels/: Cargo.toml
data/synthetic-nutrition-labels/src/: lib.rs  loader.rs  types.rs
models/bare_attention/: Cargo.toml
models/bare_attention/examples/: run_attention.rs
models/bare_attention/src/: lib.rs
models/nutrition-viewer/: Cargo.toml
models/nutrition-viewer/src/: lib.rs
models/perceiver/: Cargo.toml
models/perceiver/src/: lib.rs  nutrition_labels.rs  training.rs
models/perciever/: Cargo.toml
models/perciever/src/: lib.rs  nutrition_lables.rs
