[package]
name = "synthetic-nutrition-labels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
burn = { version = "0.10.0", features = ["dataset"] }
rand = "0.8.5"
resvg = "0.36.0"
serde = { version = "1.0.192", features = ["derive"] }
tera = "1.19.1"
